# MultilayerPerceptronASD.Tal

./: .gitignore  Oded's check.py  README.md  analysis.py  classification_rules.py  core_ml.py  datasets.py  dynamic_ranges.py  gui_app.py  main.py  metrics.py  models.py  pyproject.toml  requirements.txt  simulation.py  simulations.py  utils.py
configs/: Flexibility excercise.json  Summerfiled's replication - M1.json  Summerfiled's replication.json  Test - Initial (seed 2).json  config_1.json  default_config.json  test.json  tests.json
configs/type 1/: Data Test.json  Initial + Flexibility.json  Initial + Generalization.json  Initial Only.json  Summerfield's replication Identity.json  Summerfield's replication Sigmoid.json  Summerfield's replication Tanh.json  Summerfield's replication.json  flexibility.json
configs/type 2/: summerfield_replication.json  summerfield_replication_tests.json  test_config_gui.json
figures/Test - Initial/: config.json
figures/config_0/: config.json
figures/config_1/: config.json
figures/config_2/: config.json
runs/Summerfield_Replication_Colab/High_Variance/: events.out.tfevents.1777202497.TalPC.24132.1  events.out.tfevents.1777202626.TalPC.5244.1
runs/Summerfield_Replication_Colab/Low_Variance/: events.out.tfevents.1777202497.TalPC.24132.0  events.out.tfevents.1777202626.TalPC.5244.0
