[project]
name = "multilinearperceptronasd"
version = "0.1.0"
description = "Simulation of RichMLP vs LazyMLP dynamics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "plotly>=6.5.0",
    "pyqt5>=5.15.11",
    "pyqt5-qt5==5.15.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126"}
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true